fixed some text alignments

--- a/code/style.css
+++ b/code/style.css
@@ -19,12 +19,12 @@ body {
 
 
 .user-section {
+  box-sizing: border-box;
   display: flex;
   width: 100%;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
   gap: 1rem;
   margin-top: 1rem;
 }
@@ -33,21 +33,24 @@ body {
   color: var(--accent);
 }
 
-.user-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
-  padding-bottom: 4rem;
-  border-block-end: 1px solid var(--secondary);
-}
-
 .main-title {
   display: flex;
   justify-content: center;
   font-size: 4.5rem;
   margin: 1rem 0;
   width: 100%;
+  padding: 0 1.5rem;
+}
+
+.user-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  padding-bottom: 4rem;
+  border-block-end: 1px solid var(--secondary);
+  text-align: center;
 }
 
 .user-image {
@@ -68,6 +71,7 @@ body {
 
 .course-name {
   font-size: 1.3rem;
+  padding: 0 2rem;
 }
 
 .chart-container {
@@ -76,6 +80,7 @@ body {
 }
 
 .projects-container {
+  box-sizing: border-box;
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -102,6 +107,7 @@ body {
   height: 300px;
   border-radius: 30px;
   background-color: #d1adcc;
+  text-align: center;
   /* box-shadow: 3px 3px 4px var(--accent); */
 }
 
@@ -122,7 +128,7 @@ body {
 
 .repo-link-button {
   font-size: 1rem;
-  padding: 15px;
+  padding: 1rem;
   margin-top: 1.5rem;
   border-radius: 30px;
   background-color: var(--primary);
@@ -157,41 +163,27 @@ a.nav-item:hover {
 @media screen and (min-width:768px) {
 
   .user-section {
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
     gap: 2rem;
-    padding-top: 1rem;
-    margin: 2rem 0 0;
+    margin: 2.5rem 0 0;
   }
 
   .main-title {
-    display: flex;
-    justify-content: center;
     font-size: 5rem;
     margin: 1.5rem 0;
-    width: 100%;
   }
 
   .user-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     gap: 1.5rem;
     padding-bottom: 6rem;
   }
 
   .user-image {
     width: 350px;
-    border-radius: 50%;
     margin-bottom: 0.5rem;
   }
 
   .full-name {
     font-size: 2.5rem;
-    margin-bottom: 0;
   }
   
   .github-user-name {
@@ -199,42 +191,32 @@ a.nav-item:hover {
     margin-top: 0;
   }
 
+  .course-name {
+    font-size: 1.5rem;
+    padding: 0;
+  }
+
   .chart-container {
     width: 500px;
     margin: 2rem 0;
-    padding: 3rem 0 3rem;
+    padding: 3rem 0;
   }
 
   .projects-container {
-    box-sizing: border-box;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
     padding: 2rem 0;
   }
 
   .projects {
-    display: flex;
     width: 95%;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
     gap: 2.5rem;
-    padding: 1rem;
   }
   
   .repo-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 550px;
     height: 400px;
   }
 
   .repo-title, p {
-    margin: 0;
-    padding: 0;
     line-height: 3rem;
   }
   
@@ -247,10 +229,9 @@ a.nav-item:hover {
   }
 
   .repo-link-button {
+    font-size: 1.5rem;
     padding: 1.5rem;
     margin-top: 2rem;
-    border-radius: 30px;
-    font-size: 1.5rem;
   }
 
 }
@@ -265,43 +246,37 @@ a.nav-item:hover {
   }
 
   .user-section {
-    box-sizing: border-box;
     width: 30%;
     justify-content: space-evenly;
-    align-content: center;
     gap: 0;
     margin: 0;
-    padding: 0 0 0 3rem;
+    padding: 0 1rem 0 2.5rem;
   }
 
   .main-title {
-    display: flex;
+    width: 100%;
     font-size: 3.8rem;
     margin: 0;
-    padding: 0;
-    width: 100%;
+    padding-left: 1.5rem;
   }
 
   .user-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
     gap: 0;
     margin: 0;
     padding: 0;
     border: none;
+    text-align: center;
+    align-items: center;
   }
 
   .user-image {
-    width: 225px;
-    border-radius: 50%;
+    width: 215px;
     margin: 0;
-    padding: 0;
+    padding-top: 1rem;
   }
 
   .full-name {
-    font-size: 1.8rem;
+    font-size: 2rem;
     margin: default;
     padding: default;
   }
@@ -313,45 +288,36 @@ a.nav-item:hover {
   }
 
   .course-name {
+    font-size: 1.3rem;
     margin-bottom: 0;
-    padding: 0 0 0 3.5rem;
   }
 
   .chart-container {
     width: 285px;
-    margin: 2rem 0 0 0;
-    padding: 0 1rem;
+    margin: 1.5rem 0 0 0;
+    padding: 0 2rem;
   }
 
   .projects-container {
     width: 90%;
     height: auto;
     flex-direction: row;
-    align-items: center;
     justify-items: center;
     margin: 0;
     padding-bottom: 1rem;
   }
 
   .projects {
-    display: flex;
     width: 100%;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    padding: 1.5rem 0; 
+    gap: 1rem;
+    padding: 1.5rem 0;
+    margin-left: 0.5rem;
   }
   
   .repo-container {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items: flex-start;
-    width: 285px;
-    height: 250px;
-    padding: 1.5rem;
-    margin: 0;
+    width: 290px;
+    height: 275px;
+    padding: 1rem;
   }
 
   .repo-title, p {
@@ -369,11 +335,10 @@ a.nav-item:hover {
   }
 
   .repo-link-button {
+    font-size: 1.2rem;
     padding: 0.5rem;
     margin-top: 1rem;
     margin-left: 10%;
-    border-radius: 30px;
-    font-size: 1.2rem;
   }
 
   .footer {
@@ -388,42 +353,40 @@ a.nav-item:hover {
 
   .user-section {
     width: 40%;
-    padding: 0 0 0 3rem;
+    padding: 1rem 0 0 3rem;
   }
 
   .main-title {
-    font-size: 5rem;
-    width: 100%;
-  }
-
-  .user-info {
-    align-items: center;
+    font-size: 4.7rem;
   }
 
   .user-image {
     width: 275px;
+    padding: 0;
   }
 
   .full-name {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   
   .github-user-name {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 
   .course-name {
-    font-size: 1.7rem;
-    padding-left: 4rem;
+    font-size: 2rem;
   }
 
   .chart-container {
     width: 350px;
-    padding: 0;
+    padding: 1.5rem 0 0;
+  }
+
+  .projects {
+    margin: 0;
   }
 
   .repo-container {
-    align-items: center;
     width: 400px;
     height: 300px;
   }
@@ -444,8 +407,6 @@ a.nav-item:hover {
     padding: 0.5rem;
     margin-top: 2rem;
     margin-left: 0;
-    border-radius: 30px;
-    font-size: 1.2rem;
   }
 
 }
